2010-12-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am (AM_CPPFLAGS): Use BM_CPPFLAGS.
	* src/tests/Makefile.am: Likewise.
	* src/network/Makefile.am: Likewise.
	* src/loopformula/Makefile.am: Likewise.
	* src/generator/Makefile.am: Likewise.
	* src/dyndmcs/Makefile.am: Likewise.
	* src/dmcs/Makefile.am: Likewise.

	* configure.ac: Checks for bitmagic library.

2010-12-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/Makefile.am: Remove header files in subdirs.

2010-12-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* bm3.7.0: Add bm3.7.0 from http://bmagic.sourceforge.net/.

	* relsat-20070104: Add current relsat trunk from
	http://relsat.googlecode.com/svn/trunk/.

2010-12-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Require Boost >= 1.42.

	* minisat-20100906: Add current minisat master branch from
	  git://github.com/niklasso/minisat.git.

	* picosat-936: Add picosat-936 from http://fmv.jku.at/picosat/.

22010-12-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/Makefile.am: Add missing noinst_LIBRARIES = libcache.a

2010-11-23  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/generator/staticGen.cpp: Improved RNG initialization.

2010-11-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dyndmcs/Makefile.am: New file.
	* src/network/Makefile.am: Likewise.
	* src/loopformula/Makefile.am: Likewise.
	* src/generator/Makefile.am: Likewise.

	* src/Makefile.am: Add new subdirs.
	* configure.ac: Likewise.

	* src/dmcs/BaseDMCS.cpp: Move from src.
	* src/dmcs/BeliefCombination.cpp: Likewise.
	* src/dmcs/ClaspProcess.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/ProcessBuf.cpp: Likewise.
	* src/dmcs/QueryPlan.cpp: Likewise.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.
	* src/dyndmcs/Instantiator.cpp: Likewise.
	* src/generator/DLVVisitor.cpp: Likewise.
	* src/generator/ContextGenerator.cpp: Likewise.
	* src/generator/LogicVisitor.cpp: Likewise.