@@ -1,3 +1,8 @@
+2010-12-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* include/network/Makefile.am: Add MessageQueue.h.
+	* include/network/MessageQueue.h: Likewise.
+
 2010-12-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* src/Makefile.am (AM_CPPFLAGS): Use BM_CPPFLAGS.
